# TRUTH

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: geminillm.json  geminivlmb.json  geminivlml.json  geminivlmr.json  gpt4llm.json  gpt4vlmb.json  gpt4vlml.json  gpt4vlmr.json  html2json.py
data/html/: geminillm.html  geminivlmb.html  geminivlml.html  geminivlmr.html  gpt4llm.html  gpt4vlmb.html  gpt4vlml.html  gpt4vlmr.html
model/: init.py  run.py
tiny_llava/: data.json  decoder.py  demo.py  encoder.py  generator.py  projector.py  test.py  utils.py
