[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "truth"
version = "1.0.0"
description = "TRUTH: Toward resolving Robot vision Understanding Task Hallucinations."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==1.9.1", "torchvision==0.10.1", "tiktoken", "openpyxl", "tensorboardX",
    "transformers==4.39.3", "tokenizers==0.15.1", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.27.2", "bitsandbytes==0.41.0", "peft==0.10.0",
    "pydantic<2,>=1", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio==3.35.2", "gradio_client==0.2.9",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
    "deepspeed==0.14.0", "ninja", "wandb",
]

[project.optional-dependencies]
train = ["deepspeed==0.14.0", "ninja", "wandb"]

[project.urls]
"Homepage" = "https://github.com/Zhouxunzhe/TRUTH"
"Bug Tracker" = "https://github.com/Zhouxunzhe/TRUTH/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]